fixed css spacing and added some pics

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -80,7 +80,7 @@
     clip-path: polygon(40% 0%, 100% 0, 100% 20%, 100% 80%, 100% 100%, 40% 100%, 0% 50%);
     background-color: #9abab7;
     opacity: .9;
-    position: fixed;
+    position: absolute;
     top:0;
     right: 0;
 }
