--- a/src/components/works/cards/cards.scss
+++ b/src/components/works/cards/cards.scss
@@ -26,10 +26,17 @@
 
     .left {
       flex: 4;
-      height: 80%;
+      height: 90%;
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: #747474;
+      border-radius: 20px;
+      margin: 5px;
+      padding: 5px;
+      padding-bottom: 20px;
+      margin-left: 20px;
+
 
       .leftContainer {
         width: 90%;
@@ -49,23 +56,31 @@
           }
         }
         h2 {
-          font-size: 20px;
+          padding-top: 5px;
+          font-size: 30px;
+          color: #fefefe;
         }
         p {
-          background-color: beige;
+          background-color: #f5f5dcb5;
           border-radius: 10px;
           padding: 10px;
           font-size: 13px;
         }
         span {
+          color: #fefefe;
+
           font-size: 12px;
           font-weight: 600;
           text-decoration: underline;
         }
         .technologies {
           display: flex;
+          align-items: center;
+          justify-content: space-around;
+          background-color: #f5f5dcb5;
+          border-radius: 10px;
+          padding: 4px;
 
-          justify-content: flex-start;
 
           img {
             width: 25px;
@@ -77,10 +92,17 @@
     .right {
       flex: 8;
       height: 100%;
-      display: flex;
+      display: grid;
       justify-content: center;
-      align-items: center;
-
+      flex-direction: column;
+      padding-top: 23px;
+      .buttons{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-around;
+        margin-bottom: 43px;
+      }
       img {
         width: 470px;
         height: 300px;
@@ -91,4 +113,81 @@
       }
     }
   }
+}
+
+.bn5 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.bn5:before {
+  content: "";
+  // background: linear-gradient(
+  //   45deg,
+  //   #ff0000,
+  //   #ff7300,
+  //   #fffb00,
+  //   #48ff00,
+  //   #00ffd5,
+  //   #002bff,
+  //   #7a00ff,
+  //   #ff00c8,
+  //   #ff0000
+  // );
+  background: white;
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.bn5:active {
+  color: #000;
+}
+
+.bn5:active:after {
+  background: transparent;
+}
+
+.bn5:hover:before {
+  opacity: 1;
+}
+
+.bn5:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
